# telegram_agent

./: .dockerignore  .env.example  .flake8  .gitignore  .plan.md  .pre-commit-config.yaml  .secrets.baseline  20260203-heartbeat-soul-adaptation.md  AGENTS.md  BUGFIX-stop-button-stuck.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REACTIONS.md  COMPLETION_REACTIONS_IMPLEMENTATION.md  DESIGN_SKILLS_INTEGRATION.md  Dockerfile  PRODUCT_REQUIREMENTS.md  QUICKREF.md  README.md  REPLY_CONTEXT_IMPLEMENTATION.md  SRS_MANUAL_CRON_SETUP.md  SRS_QUICKSTART.md  SRS_SETUP_COMPLETE.md  UNIFIED_IMPROVEMENT_PLAN.md  UX.md  debug_webhook.py  docker-compose.yml  docker_webhook_debug.py  install.sh  mypy.ini  print_env.py  pyproject.toml  pytest.ini  railway.toml  railway_start.py  requirements-prod.txt  requirements-simple.txt  requirements.txt  run_tests.py  test_locked_mode.sh  (+5 more)
.beads/: issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/hooks/: auto-format-python.sh  pre-commit-tests.sh  run-contact-tests.sh  validate-defaults-yaml.sh
.github/: ISSUE_FORWARDED_VIDEO_PROCESSING.md
.github/workflows/: ci.yml
config/: cloudflared-staging.yml  cloudflared.yml  corrections_map.json  defaults.yaml  design_skills.yaml  keyboard.yaml  modes.yaml  ngrok.yml  poll_templates.yaml  routing.yaml
config/profiles/: development.yaml  production.yaml  testing.yaml
data/: poll_lifecycle_state.json  trail_poll_state.json
data/srs/: schema.sql
deploy/: Dockerfile  docker-compose.yml  install.sh  railway.toml  railway_start.py  requirements-simple.txt  telegram-agent.service
deploy/launchd/: README.md  com.telegram-agent.architecture-review-pm.plist  com.telegram-agent.bot-staging.plist  com.telegram-agent.bot.plist  com.telegram-agent.daily-research.plist  com.telegram-agent.task-monitor.plist  com.telegram_agent.worker.plist
docs/: ARCHITECTURE.md  ARCHITECTURE_FINAL.md  AUDIT_FINDINGS.md  COMPLETION_REACTIONS_QUICK_START.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_SKILLS.md  DESIGN_SKILLS_QUICKREF.md  DEV_ENVIRONMENT_PLAN.md  EMBEDDING_MIGRATION.md  FEATURES.md  FIX_SESSION_CWD_ISSUE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  ONBOARDING_RECOMMENDATIONS.md  PENTEST_STRATEGY.md  PLUGINS.md  REPLY_CONTEXT.md  SESSION_CWD_ISSUE_ANALYSIS.md  SHANNON_SETUP.md  SRS_INTEGRATION.md  TELETHON_VIDEO_INTEGRATION.md  TRAIL_REVIEW.md  WEBHOOK_SETUP.md  dev-setup-shell.md  trail-review-quickstart.md
docs/archive/: AUDIT_PLAN.md  AUDIT_REPORT_2026-02-15.md  MODEL_SETTINGS.md  TELETHON_INTEGRATION_SUMMARY.md  TIMEOUT_FIXES_SUMMARY.md
docs/review/: ONE_TIME_REVIEW_REPORT.md
extensions/: README.md
issues/: 20260201_221114_P0_anthropic-api-key-frequently-missing-from-environm.md  20260202_210006_P0_anthropic-api-key-frequently-missing-from-environm.md
launchd/: com.telegram_agent.worker.plist
locales/: en.yaml  ru.yaml
ops/launchd/: README.md  com.telegram-agent.ai-coding-tools-research.plist  com.telegram-agent.architecture-review-am.plist  com.telegram-agent.bot.plist  com.telegram-agent.daily-health-review.plist  com.telegram-agent.health.plist  com.telegram_agent.worker.plist
ops/systemd/: telegram-agent.service
plugins/claude_code/: __init__.py  plugin.py  plugin.yaml
plugins/codex/: plugin.py  plugin.yaml
plugins/klodkot/: plugin.py
plugins/pdf/: __init__.py  plugin.py  plugin.yaml
scripts/: README.md  analyze_conversations.py  apply_voice_migration.py  carousel_generator.py  check_import_case.py  check_port.py  clean_restart.sh  comprehensive_health_report.py  daily_health_review.py  debug_gallery.py  doctor.py  download_telegram_video.py  fix_gallery.py  fix_image_modes.py  fix_orphaned_images.py  generate_health_graphs.py  generate_missing_embeddings.py  health_alert.py  health_check.sh  health_check_alert.py  install_cron.sh  install_launchd.sh  manage_design_skills.py  migrate_add_model_buttons.py  query_conversations.py  run_agent_launchd.sh  run_db_backup.py  run_weekly_analysis.sh  scheduler_install.py  security_scan.sh  seed_poll_templates.py  send_morning_batch.py  setup_webhook.py  setup_wizard.py  srs_service.sh  srs_setup.sh  start.sh  start_dev.py  suggest_features.py  task_manager.py  (+9 more)
scripts/manual_tests/: test_accountability_voices.py  test_completion_reactions.py  test_embeddings.py  test_fastapi.py
scripts/migrations/: add_accountability_partner_columns.py  add_voice_response_columns.py  migrate_accountability_toggle.py  migrate_add_pending_auto_forward.py  migrate_add_polls.py  migrate_security_fields.py  migrate_voice_accountability.py
scripts/proactive_tasks/: __init__.py  base_task.py  task_monitor.py  task_registry.yaml  task_runner.py
scripts/setup/: install_sqlite_vss.py
scripts/setup_wizard/: __init__.py  env_manager.py  utils.py  wizard.py
src/: lifecycle.py  main.py  version.py
src/api/: health.py  messaging.py  metrics.py  webhook.py  webhook_handler.py
src/bot/: bot.py  callback_data_manager.py  callback_handlers.py  combined_processor.py  handlers.py  keyboard_utils.py  message_handlers.py
src/core/: authorization.py  config.py  config_validator.py  container.py  database.py  defaults_loader.py  error_messages.py  i18n.py  mode_cache.py  mode_manager.py  security.py  services.py  typed_config.py  typed_config_loader.py  vector_db.py
src/domain/: contexts.py  errors.py  events.py  interfaces.py  subscribers.py
src/middleware/: body_size.py  error_handler.py  metrics.py  rate_limit.py  request_id.py  user_rate_limit.py
src/models/: __init__.py  accountability_partner.py  accountability_profile.py  admin_contact.py  base.py  callback_data.py  chat.py  claude_session.py  collect_session.py  image.py  keyboard_config.py  message.py  (+11 more)
tests/: README.md  conftest.py  test_accountability_app.py  test_accountability_commands.py  test_accountability_domain.py  test_cors_origins.py  test_defaults_loader.py  test_doctor_prereqs.py  test_health_check_alert.py  test_import_case_check.py  test_import_layering.py  test_p0_fixes.py  test_scheduler_uses_app_service.py  test_user_allowlist.py  test_version_consistency.py  test_worker_queue.py
(+468 files in other folders)
